vs-blue.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
  namespace: comic-prod
spec:
  hosts:
    - backend
  http:
    - route:
        - destination:
            host: backend
            subset: v1
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: comic-prod
spec:
  hosts:
    - "comic.apl.io.vn"
  gateways:
    - comic-gateway
  http:
    - route:
        - destination:
            host: frontend
            subset: v1
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs-active
  namespace: comic-prod
spec:
  hosts:
    - "comic-active.localhost"
  gateways:
    - comic-gateway
  http:
    - route:
        - destination:
            host: frontend
            subset: v1
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs-idle
  namespace: comic-prod
spec:
  hosts:
    - "comic-idle.localhost"
  gateways:
    - comic-gateway
  http:
    - route:
        - destination:
            host: frontend
            subset: v2
          weight: 100
