vs-green.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
  namespace: comic-prod
spec:
  hosts:
  - backend
  http:
  - route:
    - destination:
        host: backend
        subset: v2
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vs
  namespace: comic-prod
spec:
  hosts:
  - "*"
  gateways:
  - comic-gateway
  http:
  - route:
    - destination:
        host: frontend
        subset: v2
      weight: 100
